tests/errors/papercut/cell-and-group-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/cell-and-group-conflict.futil
9 |    group incr {
  |          ^^^^ Name already bound by cell
